små xml endringer i design og lagt til strings

--- a/app/src/main/res/layout/activity_editmarker.xml
+++ b/app/src/main/res/layout/activity_editmarker.xml
@@ -15,9 +15,9 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Navn her:"
+            android:text="@string/name"
             android:gravity="center"
-            android:textSize="20dp">
+            android:textSize="20sp">
         </TextView>
         <EditText
             android:id="@+id/name"
@@ -27,9 +27,9 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Info her:"
+            android:text="@string/info"
             android:gravity="center"
-            android:textSize="20dp">
+            android:textSize="20sp">
         </TextView>
         <EditText
             android:id="@+id/info"
@@ -41,16 +41,17 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:gravity="center">
+            android:gravity="center"
+            android:layout_marginTop="20dp">
 
             <Button
                 android:id="@+id/savebtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Lagre"
+                android:text="@string/save"
                 android:textColor="@color/white"
                 android:backgroundTint="@color/blue"
-                android:layout_marginRight="20dp">
+                android:layout_marginEnd="20dp">
             </Button>
             <Button
                 android:id="@+id/delbtn"
@@ -58,7 +59,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/white"
-                android:text="Slett">
+                android:text="@string/del">
             </Button>
 
         </LinearLayout>
