--- a/app/src/main/res/layout/activity_editmarker.xml
+++ b/app/src/main/res/layout/activity_editmarker.xml
@@ -8,60 +8,71 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="20dp"
-        android:gravity="center"
         tools:ignore="MissingConstraints">
 
-        <TextView
-            android:layout_width="match_parent"
+        <ImageButton
+            android:id="@+id/backbtn"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/name"
-            android:gravity="center"
-            android:textSize="20sp">
-        </TextView>
-        <EditText
-            android:id="@+id/name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-        </EditText>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/info"
-            android:gravity="center"
-            android:textSize="20sp">
-        </TextView>
-        <EditText
-            android:id="@+id/info"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-        </EditText>
+            android:src="@drawable/ic_baseline_arrow_back_24"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:gravity="center"
-            android:layout_marginTop="20dp">
+            android:orientation="vertical"
+            android:padding="20dp"
+            tools:ignore="MissingConstraints">
 
-            <Button
-                android:id="@+id/savebtn"
-                android:layout_width="wrap_content"
+            <TextView
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/save"
-                android:textColor="@color/white"
-                android:backgroundTint="@color/blue"
-                android:layout_marginEnd="20dp">
-            </Button>
-            <Button
-                android:id="@+id/delbtn"
-                android:backgroundTint="@color/red"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/white"
-                android:text="@string/del">
-            </Button>
+                android:gravity="center"
+                android:text="@string/name"
+                android:textSize="20sp"/>
 
+            <EditText
+                android:id="@+id/name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@string/info"
+                android:textSize="20sp"/>
+
+            <EditText
+                android:id="@+id/info"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/savebtn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="20dp"
+                    android:backgroundTint="@color/blue"
+                    android:text="@string/save"
+                    android:textColor="@color/white"/>
+
+                <Button
+                    android:id="@+id/delbtn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="@color/red"
+                    android:text="@string/del"
+                    android:textColor="@color/white"/>
+
+            </LinearLayout>
         </LinearLayout>
 
     </LinearLayout>
