pyntet på marker edit xml

--- a/app/src/main/res/layout/activity_editmarker.xml
+++ b/app/src/main/res/layout/activity_editmarker.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -15,6 +16,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_baseline_arrow_back_24"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="30sp"
+            android:gravity="center"
+            android:text="@string/reg"
+            android:textColor="@color/black"
+            android:layout_marginBottom="20dp">
+        </TextView>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -31,10 +42,21 @@
                 android:text="@string/name"
                 android:textSize="20sp"/>
 
-            <EditText
-                android:id="@+id/info"
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/nameField"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                app:startIconDrawable="@drawable/ic_baseline_add_comment_24"
+                android:layout_margin="10dp"
+                android:hint="@string/name">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/nameInput"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+            </com.google.android.material.textfield.TextInputLayout>
 
             <TextView
                 android:layout_width="match_parent"
@@ -43,10 +65,21 @@
                 android:text="@string/info"
                 android:textSize="20sp"/>
 
-            <EditText
-                android:id="@+id/name"
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/infoField"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                app:startIconDrawable="@drawable/ic_baseline_info_24"
+                android:layout_margin="10dp"
+                android:hint="@string/info">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/infoInput"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+            </com.google.android.material.textfield.TextInputLayout>
 
             <TextView
                 android:layout_width="match_parent"
@@ -55,10 +88,21 @@
                 android:text="@string/adr"
                 android:textSize="20sp"/>
 
-            <EditText
-                android:id="@+id/adresse"
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/adrField"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                app:startIconDrawable="@drawable/ic_baseline_location_on_24"
+                android:layout_margin="10dp"
+                android:hint="@string/adr">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/adrInput"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+            </com.google.android.material.textfield.TextInputLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -72,6 +116,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="20dp"
+                    android:drawableLeft="@drawable/ic_baseline_edit_24"
                     android:backgroundTint="@color/blue"
                     android:text="@string/save"
                     android:textColor="@color/white"/>
@@ -81,6 +126,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:backgroundTint="@color/red"
+                    android:drawableLeft="@drawable/ic_baseline_delete_24"
                     android:text="@string/del"
                     android:textColor="@color/white"/>
 
