begynt å jobbe med edit

--- a/app/src/main/res/layout/activity_editmarker.xml
+++ b/app/src/main/res/layout/activity_editmarker.xml
@@ -116,6 +116,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="20dp"
+                    android:onClick="saveMarker"
                     android:drawableLeft="@drawable/ic_baseline_edit_24"
                     android:backgroundTint="@color/blue"
                     android:text="@string/save"
