--- a/app/src/main/res/layout/activity_editmarker.xml
+++ b/app/src/main/res/layout/activity_editmarker.xml
@@ -127,6 +127,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:backgroundTint="@color/red"
+                    android:onClick="deleteMarker"
                     android:drawableLeft="@drawable/ic_baseline_delete_24"
                     android:text="@string/del"
                     android:textColor="@color/white"/>
